@@ -74,7 +74,8 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Machines
 
         public override bool minutesElapsed(int minutes, GameLocation environment)
         {
-
+            this.MinutesUntilReady -= minutes;
+            if (this.MinutesUntilReady < 0) this.MinutesUntilReady = 0;
             return true;
             //return base.minutesElapsed(minutes, environment);
         }
