@@ -8,7 +8,7 @@ using Omegasis.Revitalize.Framework.Constants;
 using Omegasis.Revitalize.Framework.Constants.ItemIds.Objects;
 using Omegasis.Revitalize.Framework.World.Debris;
 using Omegasis.Revitalize.Framework.World.Objects;
-using Omegasis.Revitalize.Framework.World.Objects.Machines;
+using Omegasis.Revitalize.Framework.World.Objects.Farming;
 using StardewValley;
 using StardewValley.Objects;
 
